Adding cluster name to task and instance keys (#10)
